--- a/p2/Vagrantfile
+++ b/p2/Vagrantfile
@@ -2,8 +2,8 @@ Vagrant.configure("2") do |config|
   config.vm.box = "boxomatic/alpine-3.20"
 
   # Define the Kubernetes controller node
-  config.vm.define "araysseS" do |controller|
-    controller.vm.hostname = "serverS"
+  config.vm.define "mmounibS" do |controller|
+    controller.vm.hostname = "mmounibS"
     controller.vm.network "private_network", ip: "192.168.56.110"
 
     controller.vm.provider "virtualbox" do |vb|
