--- a/p3/Makefile
+++ b/p3/Makefile
@@ -6,6 +6,8 @@ dep:
 	sh scripts/dependency-installation.sh
 
 clean:
+	sudo kubectl delete namespace argocd
+	sudo kubectl delete namespace dev
 	sudo k3d cluster delete $(NAME)
 
 re : clean all
