--- a/p2/confs/ingress.yaml
+++ b/p2/confs/ingress.yaml
@@ -1,28 +1,20 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: app1-ingress
+  name: apps-ingress
 spec:
   rules:
   - host: app1.com
     http:
       paths:
-      - path: /
-        pathType: Prefix
+      - path: /  # All traffic to the root path ('/') of 'app1.com' will be routed.
+        pathType: Prefix  # Specifies that the path is a prefix match, so /app1 and any subpaths will be matched.
         backend:
           service:
-            name: app1
+            name: app1  # The traffic will be forwarded to the 'app1' service.
             port:
-              number: 80
+              number: 80  # The service will be accessed on port 80.
 
----
-
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: app2-ingress
-spec:
-  rules:
   - host: app2.com
     http:
       paths:
@@ -34,20 +26,12 @@ spec:
             port:
               number: 80
 
----
-
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: app3-ingress
-spec:
-  rules:
   - http:
       paths:
-      - path: /
+      - path: /  
         pathType: Prefix
         backend:
           service:
             name: app3
             port:
-              number: 80
+              number: 80 
